--- a/package.json
+++ b/package.json
@@ -19,16 +19,27 @@
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
+    "angular-file-saver": "^1.1.3",
+    "bootstrap": "^3.4.1",
+    "bootstrap-icons": "^1.7.2",
+    "file-saver": "^2.0.5",
+    "jquery": "^3.6.0",
+    "js-yaml": "^4.1.0",
     "rxjs": "~6.6.0",
+    "swagger-mock-validator": "^10.1.2",
     "tslib": "^2.0.0",
+    "yaml-server": "^1.10.0",
+    "yamljs": "^0.3.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.13",
     "@angular/cli": "~11.2.15",
     "@angular/compiler-cli": "~11.2.14",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/yamljs": "^0.2.31",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
